// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A suite example using Snapshot renders App component correctly 1`] = `
<div>
  <div>
    <section
      className="sc-gXfWUo fbgvgK"
    >
      <button
        className="sc-ciSmjq fGvxWW"
        onClick={[Function]}
      >
        Ask a question
      </button>
      <div>
        <div
          className="sc-cBoprd ebejrs"
        >
          <div>
            Questions & Answers
          </div>
        </div>
        <div>
          <div
            className="sc-iwaifL gUOPVN"
          >
            <p>
              Sort by: 
              -select-
               ▾
            </p>
            <div
              className="sc-bCwgka kfElgi"
            >
              <div
                className="sc-cxNIbT ibZciV"
                onClick={[Function]}
              >
                <div>
                  Newest questions
                </div>
              </div>
              <div
                className="sc-cxNIbT ibZciV"
                onClick={[Function]}
              >
                <div>
                  Newest answers
                </div>
              </div>
              <div
                className="sc-cxNIbT ibZciV"
                onClick={[Function]}
              >
                <div>
                  Most answered
                </div>
              </div>
              <div
                className="sc-cxNIbT ibZciV"
                onClick={[Function]}
              >
                <div>
                  Answers needed
                </div>
              </div>
              <div
                className="sc-cxNIbT ibZciV"
                onClick={[Function]}
              >
                <div>
                  Most helpful answers
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <div>
      <div>
        <section
          className="sc-fKgIGh keGHJm"
        >
          <p>
            1-
            0
             of 
            0
             Questions
          </p>
        </section>
      </div>
    </div>
  </div>
  <div>
    <button
      className="sc-lmgQde kinQhw"
      onClick={[Function]}
    >
      Load More
    </button>
  </div>
  <div
    className="sc-jcwofb cOCcZx"
  >
    <p>
      How are we doing? Give us feedback on this page.
    </p>
    <h2>
      Sign up for REI emails
    </h2>
    <p>
      Co-op offers, events & cool new gear
    </p>
    Email
    <form>
      <input
        type="text"
      />
      <button
        className="sc-hiKfjK eprGiy"
      >
        Sign me up!
      </button>
    </form>
  </div>
  <div
    className="sc-jJMGHv dyzYGl"
  >
    <p>
      Other Stuff
    </p>
    <p>
      Other Stuff
    </p>
    <p>
      Other Stuff
    </p>
    <p>
      Other Stuff
    </p>
    <p>
      Other Stuff
    </p>
    <p>
      Other Stuff
    </p>
    <p>
      Other Stuff
    </p>
    <p>
      Other Stuff
    </p>
    <p>
      Other Stuff
    </p>
    <p>
      Other Stuff
    </p>
    <p>
      Other Stuff
    </p>
    <p>
      Other Stuff
    </p>
    <p>
      Other Stuff
    </p>
    <p>
      Other Stuff
    </p>
    <p>
      Other Stuff
    </p>
    <p>
      Other Stuff
    </p>
    <p>
      Other Stuff
    </p>
    <p>
      Other Stuff
    </p>
    <p>
      Other Stuff
    </p>
    <p>
      Other Stuff
    </p>
    <p>
      Other Stuff
    </p>
    <p>
      Other Stuff
    </p>
    <p>
      Other Stuff
    </p>
    <p>
      Other Stuff
    </p>
  </div>
</div>
`;

exports[`renders Dropdown component correctly 1`] = `
<div>
  <div
    className="sc-iwaifL gUOPVN"
  >
    <p>
      Sort by: 
       ▾
    </p>
    <div
      className="sc-bCwgka kfElgi"
    >
      <div
        className="sc-cxNIbT ibZciV"
        onClick={[Function]}
      >
        <div>
          Newest questions
        </div>
      </div>
      <div
        className="sc-cxNIbT ibZciV"
        onClick={[Function]}
      >
        <div>
          Newest answers
        </div>
      </div>
      <div
        className="sc-cxNIbT ibZciV"
        onClick={[Function]}
      >
        <div>
          Most answered
        </div>
      </div>
      <div
        className="sc-cxNIbT ibZciV"
        onClick={[Function]}
      >
        <div>
          Answers needed
        </div>
      </div>
      <div
        className="sc-cxNIbT ibZciV"
        onClick={[Function]}
      >
        <div>
          Most helpful answers
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Helpful component correctly 1`] = `
<p>
  Helpful? 
  <button
    className="sc-bdnylx bGopLz yes"
    onClick={[Function]}
  >
    Yes · 
    0
  </button>
   
  <button
    className="sc-bdnylx bGopLz no"
    onClick={[Function]}
  >
    No · 
    1
  </button>
   
  <button
    className="sc-bdnylx bGopLz"
  >
    Report as inappropriate
  </button>
</p>
`;

exports[`renders QuestionList component correctly 1`] = `
<div>
  <section
    className="sc-fKgIGh keGHJm"
  >
    <p>
      1-
      2
       of 
      2
       Questions
    </p>
  </section>
  <div>
    <section
      className="sc-fFSRdu lTHh"
    >
      <div>
        <section
          className="sc-bkbjAj KBlYw"
        >
          1
          <div
            className="sc-kfYqjs jVfLBx"
          >
            answers
          </div>
        </section>
        <div>
          <div
            className="sc-hHEjAm hmcqje"
          >
            BobbyB
             · 
            <button
              className="sc-dIvqjp dOeeHJ"
            >
              17 minutes ago
            </button>
          </div>
        </div>
        <div
          className="sc-dlMBXb fghCqn"
        >
          <p>
            Does this product fit both men and women?
          </p>
        </div>
        <button
          className="sc-iemXMA kQNakb"
          onClick={[Function]}
        >
          Answer the question
        </button>
      </div>
      <div>
        <div>
          <div
            className="sc-jSFkmK crwJGT"
          >
            REI Helper Sally
             · 
            <button
              className="sc-eCApGN fooWmP"
            >
              17 minutes ago
            </button>
          </div>
        </div>
        <div
          className="sc-iCoHVE johfzo"
        >
          <p>
            Yes it does.
          </p>
        </div>
      </div>
      <p>
        Helpful? 
        <button
          className="sc-bdnylx bGopLz yes"
          onClick={[Function]}
        >
          Yes · 
          0
        </button>
         
        <button
          className="sc-bdnylx bGopLz no"
          onClick={[Function]}
        >
          No · 
          1
        </button>
         
        <button
          className="sc-bdnylx bGopLz"
        >
          Report as inappropriate
        </button>
      </p>
    </section>
  </div>
  <div>
    <section
      className="sc-fFSRdu lTHh"
    >
      <div>
        <section
          className="sc-bkbjAj KBlYw"
        >
          2
          <div
            className="sc-kfYqjs jVfLBx"
          >
            answers
          </div>
        </section>
        <div>
          <div
            className="sc-hHEjAm hmcqje"
          >
            Rachel098
             · 
            <button
              className="sc-dIvqjp dOeeHJ"
            >
              17 minutes ago
            </button>
          </div>
        </div>
        <div
          className="sc-dlMBXb fghCqn"
        >
          <p>
            How durable is this?
          </p>
        </div>
        <button
          className="sc-iemXMA kQNakb"
          onClick={[Function]}
        >
          Answer the question
        </button>
      </div>
      <div>
        <div>
          <div
            className="sc-jSFkmK crwJGT"
          >
            REI Helper Jim
             · 
            <button
              className="sc-eCApGN fooWmP"
            >
              17 minutes ago
            </button>
          </div>
        </div>
        <div
          className="sc-iCoHVE johfzo"
        >
          <p>
            It can stand up to all your favortie activities.
          </p>
        </div>
      </div>
      <p>
        Helpful? 
        <button
          className="sc-bdnylx bGopLz yes"
          onClick={[Function]}
        >
          Yes · 
          2
        </button>
         
        <button
          className="sc-bdnylx bGopLz no"
          onClick={[Function]}
        >
          No · 
          0
        </button>
         
        <button
          className="sc-bdnylx bGopLz"
        >
          Report as inappropriate
        </button>
      </p>
    </section>
  </div>
</div>
`;
